--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "@popperjs/core": "2.0.0-alpha.1",
+    "@popperjs/core": "^2.11.2",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "5.0.0-beta2",
+    "bootstrap": "^5.1.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
